--- a/CV/index.html
+++ b/CV/index.html
@@ -4,13 +4,13 @@
 	<title>CV Rael CALITRO</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 <body>
 	<header>
 		<div class="picture">
-			<img src="photo.jpg" alt="photo">
+			<img src="assets/picture/photo.jpg" alt="photo">
 		</div>
 		<div class="user_title">
 			<li class="user_job">Développeur WEB</li>
